add backup & mars plugin
